<resources>
    <string name="app_name">MAPD726_project</string>
    <!--    <string name="base_url">https://mapd713-group-project.onrender.com</string>-->
    <string name="base_url">https://mapd713-group-project.onrender.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">SmartCart</string>
    <string name="subText">Shop Smart, Save More</string>
    <string name="searchText">Search products...</string>
    <string name="compareText">Compare Prices Across Stores</string>
    <string name="compareBtn"><![CDATA[Start Comparing >]]></string>
    <string name="previousListText">Previous Shopping Lists</string>
    <string name="addItemsHeader">Add Items</string>
    <string name="selectItemText">Your list is empty. Select a product below!</string>
    <string name="searchProductText">Search product (e.g. Milk)</string>
    <string name="walmart">Walmart</string>
    <string name="costco">Costco</string>
    <string name="superstore">Superstore</string>
    <string name="addItemBtn">Add Item</string>
    <string name="saveListBtn">Save List</string>
    <string name="price_comparison">Price Comparison</string>
    <string name="best_deal">Best Deal:</string>
    <string name="costco1">Costco</string>
    <string name="unit_price">Unit Price: $0.50 / L</string>
    <string name="costco2">Costco</string>
    <string name="dealsHeader">Weekly Deals</string>
    <string name="listHeader">Shopping Lists</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="_0_00">$0.00</string>
    <string name="listDetailsHeader">List Details</string>
    <string name="no_items_in_this_list">No items in this list</string>
    <string name="username">Enter your Username</string>
    <string name="loginBtn">Login</string>
    <string name="registerText">Don\'t have an account? Tap here to register.</string>
    <string name="product_name">Product Name</string>
    <string name="details">Details</string>
    <string name="weekly_groceries">Weekly Groceries</string>
    <string name="welcome_message">Welcome back,</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_information">Account Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="app_settings">App Settings</string>
    <string name="logOutBtnText">Log Out</string>
    <string name="shopping_lists_text">Shopping Lists</string>
</resources>