<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/light_background"
    tools:context=".LogInFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/outline_shopping_cart_24"
        app:tint="@color/smart_cart_orange"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to SmartCart"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/smart_cart_green"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/smart_cart_green"
        android:textColor="@android:color/white"
        android:text="@string/loginBtn"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textColor="@color/smart_cart_orange"
        android:textStyle="bold"
        android:padding="8dp"/>

</LinearLayout>